--- a/ChefMate/src/features/auth/pages/Login/LoginPage.css
+++ b/ChefMate/src/features/auth/pages/Login/LoginPage.css
@@ -1,11 +1,11 @@
 /* LoginPage.css */
 
-html,
+/* html,
 body {
   height: 100%;
   margin: 0;
   padding: 0;
-}
+} */
 
 .login-page {
   min-height: 100vh;
@@ -25,6 +25,7 @@ body {
   width: 100%;
   max-width: 28rem;
   text-align: center;
+  margin: 1rem;
 }
 
 .login-title {
@@ -36,8 +37,26 @@ body {
 }
 
 .login-subtitle {
-  margin-bottom: 1.5rem;
+  /* margin-bottom: 2rem; */
+  margin-top: 2rem;
   color: white;
+}
+
+.login-Google-button {
+  background-color: #417DCA;
+  color: white;
+  font-weight: 600;
+  padding: 0.5rem 1rem;
+  margin-top: 1rem;
+  margin-left: 1rem;
+  border-radius: 0.75rem;
+  transition: background-color 0.3s ease;
+  border: none;
+  cursor: pointer;
+}
+
+.login-Google-button:hover {
+  background-color: #dc2626;
 }
 
 .login-button {
@@ -45,7 +64,8 @@ body {
   color: white;
   font-weight: 600;
   padding: 0.5rem 1rem;
-  /* margin-top: 1rem; */
+  margin-top: 1rem;
+  margin-right: 1rem;
   border-radius: 0.75rem;
   transition: background-color 0.3s ease;
   border: none;
@@ -57,7 +77,7 @@ body {
 }
 
 .button {
-      background-color: #417DCA;
+  background-color: #417DCA;
   color: white;
   font-weight: 600;
   padding: 0.5rem 1rem;
@@ -77,6 +97,7 @@ body {
   flex-direction: column;
   gap: 1rem;
   margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .login-form label {
@@ -105,6 +126,7 @@ body {
   color: #1f2937;
   font-weight: 600;
   padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
   margin-top: 1.5rem;
   border-radius: 0.75rem;
   border: none;
