added buton.css component, fixed save user on login, made simple profile page with button navigation, tidied folder structure

--- a/ChefMate/src/features/auth/pages/Login/LoginPage.css
+++ b/ChefMate/src/features/auth/pages/Login/LoginPage.css
@@ -113,7 +113,7 @@ body {
   border: 1px solid #ccc;
   font-size: 1rem;
   outline: none;
-  color: #D9D9D9;
+  color: darkgray;
 }
 
 .login-form input:focus {
