--- a/ChefMate/src/features/auth/pages/Home/HomePage.css
+++ b/ChefMate/src/features/auth/pages/Home/HomePage.css
@@ -13,19 +13,29 @@
   margin: 0.5rem 0;
 }
 
-.logout-button {
-  background-color: #417DCA;
-  color: white;
-  font-weight: 600;
-  padding: 0.5rem 1rem;
-  margin-top: 1rem;
-  margin-right: 1rem;
-  border-radius: 0.75rem;
-  transition: background-color 0.3s ease;
-  border: none;
-  cursor: pointer;
+.searchrecipe-form input {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+  outline: none;
+  color: darkgray;
 }
 
-.logout-button:hover {
-  background-color: #dc2626;
+.search-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* fill full screen height */
+}
+
+.searchrecipe-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.search-wrapper {
+  display: flex;
+  gap: 0.5rem;
 }
