added mock meal template when api reaches its fetch limit. updated recipe card to scroll though meals

--- a/ChefMate/src/features/auth/components/Buttons.css
+++ b/ChefMate/src/features/auth/components/Buttons.css
@@ -150,3 +150,54 @@
 .clear-button:hover {
   background-color: #dc2626;
 }
+
+.back-button {
+  background-color: #417DCA;
+  color: white;
+  font-weight: 600;
+  padding: 0.5rem 1rem;
+  margin-top: 1rem;
+  margin-right: 1rem;
+  border-radius: 0.75rem;
+  transition: background-color 0.3s ease;
+  border: none;
+  cursor: pointer;
+}
+
+.back-button:hover {
+  background-color: #dc2626;
+}
+
+.more-button {
+  background-color: #417DCA;
+  color: white;
+  font-weight: 600;
+  padding: 0.5rem 1rem;
+  margin-top: 1rem;
+  margin-right: 1rem;
+  border-radius: 0.75rem;
+  transition: background-color 0.3s ease;
+  border: none;
+  cursor: pointer;
+}
+
+.more-button:hover {
+  background-color: #dc2626;
+}
+
+.save-button {
+  background-color: #417DCA;
+  color: white;
+  font-weight: 600;
+  padding: 0.5rem 1rem;
+  margin-top: 1rem;
+  margin-right: 1rem;
+  border-radius: 0.75rem;
+  transition: background-color 0.3s ease;
+  border: none;
+  cursor: pointer;
+}
+
+.save-button:hover {
+  background-color: #dc2626;
+}
