--- a/ChefMate/src/features/auth/components/cards/RecipeCard.css
+++ b/ChefMate/src/features/auth/components/cards/RecipeCard.css
@@ -10,19 +10,29 @@
 
 .meal-grid {
   display: flex;
-  justify-content: space-between;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  gap: 1rem;
+  padding: 1rem 0;
+  /* justify-content: space-between;
   gap: 16px;
-  margin-top: 20px;
+  margin-top: 20px; */
 }
 
 .meal-card {
+  flex: 0 0 auto;
+  width: 200px;
+  height: 300px;
   background-color: #f8f9fa;
   border: 1px solid #ccc;
   border-radius: 10px;
   padding: 16px;
-  flex: 1;
+  /* flex: 1; */
   text-align: center;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .meal-card h3 {
