--- a/ChefMate/src/features/auth/components/cards/RecipeCard.css
+++ b/ChefMate/src/features/auth/components/cards/RecipeCard.css
@@ -51,3 +51,11 @@
 .meal-card button:hover {
   background-color: #218838;
 }
+
+.meal-image {
+  width: 100%;
+  height: 140px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
