added module css to stop global styling on same food image, added view profile button to meal card, fix some typos, create HomeProvider to remove functions from HomePage.tsx, general tidy of old code

--- a/ChefMate/src/features/auth/components/cards/MealCard.module.css
+++ b/ChefMate/src/features/auth/components/cards/MealCard.module.css
@@ -30,6 +30,13 @@
   color: #555;
 }
 
+.image {
+  width: 100%;
+  max-width: 400px;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+}
+
 .diet-info p {
   margin: 0.2rem 0;
   font-weight: bold;
